@@ -13,12 +13,15 @@ import java.time.format.DateTimeFormatter;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.springframework.util.ObjectUtils;
 
 public abstract class HeaderCardFactory {
 
   protected DistributionServiceConfig config;
+
+  protected HeaderCardFactory(final DistributionServiceConfig config) {
+    this.config = config;
+  }
 
   /**
    * Create KeyFigureCard object. Calls the children method `buildKeyFigureCard` for card specific properties. This
@@ -49,9 +52,7 @@ public abstract class HeaderCardFactory {
   }
 
   private void throwIfNullFieldsFound(StatisticsJsonStringObject stats) {
-    var nullFieldsOrZeroOrLessThanZero = getRequiredFieldValues(stats).stream()
-        .filter(Optional::isEmpty)
-        .collect(Collectors.toList());
+    var nullFieldsOrZeroOrLessThanZero = getRequiredFieldValues(stats).stream().filter(Optional::isEmpty).toList();
     if (!nullFieldsOrZeroOrLessThanZero.isEmpty()) {
       throw new MissingPropertyException(this.getCardId());
     }
@@ -73,9 +74,5 @@ public abstract class HeaderCardFactory {
    */
   protected List<Optional<Object>> getRequiredFieldValues(StatisticsJsonStringObject stats) {
     return Collections.emptyList();
-  }
-
-  public void setConfig(final DistributionServiceConfig config) {
-    this.config = config;
   }
 }
